# ChangeLog for games-strategy/outerspace
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/outerspace/ChangeLog,v 1.8 2007/06/16 21:02:27 nyhm Exp $

*outerspace-0.5.64 (16 Jun 2007)

  16 Jun 2007; Tristan Heaven <nyhm@gentoo.org> +outerspace-0.5.64.ebuild:
  Version bump

*outerspace-0.5.63.1 (28 May 2007)

  28 May 2007; Tristan Heaven <nyhm@gentoo.org> +outerspace-0.5.63.1.ebuild:
  Version bump

*outerspace-0.5.63 (27 May 2007)

  27 May 2007; Tristan Heaven <nyhm@gentoo.org> +outerspace-0.5.63.ebuild:
  Version bump

*outerspace-0.5.62 (20 May 2007)

  20 May 2007; Tristan Heaven <nyhm@gentoo.org> +outerspace-0.5.62.ebuild:
  Version bump

*outerspace-0.5.61 (26 Feb 2007)

  26 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +outerspace-0.5.61.ebuild:
  version bump

  07 Jan 2007; <tupone@gentoo.org> outerspace-0.5.59.ebuild:
  Added ~amd64 keyword. Bug #160453 by Arttu Valo

  02 Jan 2007; <tupone@gentoo.org> outerspace-0.5.59.ebuild:
  Adding some error handling

*outerspace-0.5.59 (01 Jan 2007)

  01 Jan 2007; <tupone@gentoo.org> +files/outerspace, +metadata.xml,
  +outerspace-0.5.59.ebuild:
  Initial import. Bug #89059 submitted by Chris Gorgolewski.