@@ -7,6 +7,7 @@ RMD160 b89fc3abffe85f63cb8469b0ac2abe0fd3b60dc1 files/outerspace 169
 SHA256 e6b6bad8a9ea3e85c13a282e8eb9ed1c71649d79a3309c5f7a053a2727028a7b files/outerspace 169
 DIST OuterSpace-0.5.63.1.tar.gz 1682349 RMD160 254c0986f577a8af9c6d3ef7618f63a763db64b4 SHA1 fe9bb4a684aa5683c4ba377db1b555ff58b6ae28 SHA256 12b941e90067c9dd5800be27ac6fea994bab9e14c8362b56421011d3bf6856b5
 DIST OuterSpace-0.5.64.tar.gz 1807617 RMD160 8596d1be5cce75181c3e8cd7be1146c232ee4af5 SHA1 b854e91a8cbafbb14e98d79106bb1948e32b80be SHA256 e4374ee1a9ce8b08bc8b88a35ebe93400a9b433d89fc705efa411b13bac1ee51
+DIST OuterSpace-0.5.65.tar.gz 2182005 RMD160 9c019cf54d662c28a2db8bf5f9eeae9fb2ff2123 SHA1 60dd06550c9efa2e23999ba3763aa51b0bf32735 SHA256 a75cd981fffc2f889f9c9c616aafc5d02d1f62b62f616e255d883c31c685ce5f
 EBUILD outerspace-0.5.63.1.ebuild 1128 RMD160 f73ecb7c3b84a0f29763135e8d3a93fe37b005d8 SHA1 3fad3cad70c6bf066f388b4f92614d708f6fdbc4 SHA256 5c1e379b8f205cc88471fb452cd0916035d337497420c7fb969bfee7781ffe38
 MD5 917a9f03036063c40d52df4d66644315 outerspace-0.5.63.1.ebuild 1128
 RMD160 f73ecb7c3b84a0f29763135e8d3a93fe37b005d8 outerspace-0.5.63.1.ebuild 1128
@@ -15,10 +16,14 @@ EBUILD outerspace-0.5.64.ebuild 1126 RMD160 4726c2b48a8c843d3afce1dc499e3bf5e7db
 MD5 adf877352dd67a01d8144f97d17dd389 outerspace-0.5.64.ebuild 1126
 RMD160 4726c2b48a8c843d3afce1dc499e3bf5e7db8e00 outerspace-0.5.64.ebuild 1126
 SHA256 bcd1c2540e3b65169e0c1ce3b6023c80e33192fbe03e54d0cab786d694240977 outerspace-0.5.64.ebuild 1126
-MISC ChangeLog 1255 RMD160 7417d2388dbff2dd150fbd3835f9540168e3fb80 SHA1 4e03e0fcc1c856c6365ea3638b122ce0e1e268ca SHA256 50a6672a7420584b8291a7e5aab1883ac88cb26ed2019cefb57838f2a61db82f
-MD5 b1384732ba22b7ac6fc8972ff984060c ChangeLog 1255
-RMD160 7417d2388dbff2dd150fbd3835f9540168e3fb80 ChangeLog 1255
-SHA256 50a6672a7420584b8291a7e5aab1883ac88cb26ed2019cefb57838f2a61db82f ChangeLog 1255
+EBUILD outerspace-0.5.65.ebuild 1126 RMD160 cdbf7ff5ff637c945a6c70547addc69394ca9d83 SHA1 6d72113ed07cf18b084c6b9ea10331a071cb0a05 SHA256 e7d7a2ec7d7c86251e37c260a3dfa407596e39bf55e20d4277b05f8f6027a23e
+MD5 fd3f74b944b9e186ad55a17012889eac outerspace-0.5.65.ebuild 1126
+RMD160 cdbf7ff5ff637c945a6c70547addc69394ca9d83 outerspace-0.5.65.ebuild 1126
+SHA256 e7d7a2ec7d7c86251e37c260a3dfa407596e39bf55e20d4277b05f8f6027a23e outerspace-0.5.65.ebuild 1126
+MISC ChangeLog 1380 RMD160 3a7f282fe20937384bfc3ef8e11e4c20fd1fa6f3 SHA1 2429e4c91cf1029a8ca34f976381db7933572ac1 SHA256 690d7bc4a1c3bd32a973dcf4622b90240542ff31f3a97afcd9c01f5dc3268c1b
+MD5 91da839d71c0e7237ab7809c43b51262 ChangeLog 1380
+RMD160 3a7f282fe20937384bfc3ef8e11e4c20fd1fa6f3 ChangeLog 1380
+SHA256 690d7bc4a1c3bd32a973dcf4622b90240542ff31f3a97afcd9c01f5dc3268c1b ChangeLog 1380
 MISC metadata.xml 660 RMD160 1cf6d0f621b9bb41f53fda213029e1929b71fd03 SHA1 bffccb782cf851d2df01e04a4b32116c35699c5b SHA256 067a17465806395c1f5ef75903a920601e06bf3726736bcbdfb3f448907b2d39
 MD5 2697002fa3d0b643d0ab8f0bf84093d1 metadata.xml 660
 RMD160 1cf6d0f621b9bb41f53fda213029e1929b71fd03 metadata.xml 660
@@ -29,10 +34,13 @@ SHA256 8954d3d24bc3ecbbf76ec9e681276c307d85bd6bca97f50d5eb87289d8c99a46 files/di
 MD5 be393d0764c49bb4899090557f5862f2 files/digest-outerspace-0.5.64 256
 RMD160 e80bd3813f8769720c49a62b6d8b0a0f987891b8 files/digest-outerspace-0.5.64 256
 SHA256 2b11a7de7105815917ca6b159b6d7d3b17bcb8dddf4a22986151ee200bf083fe files/digest-outerspace-0.5.64 256
+MD5 17994cdbd8ba6e23ba65c7cf19865ed3 files/digest-outerspace-0.5.65 256
+RMD160 e7bf21403e077869dfd4af94c4870cdd362d6e81 files/digest-outerspace-0.5.65 256
+SHA256 34cb152c3eb42529a5da4b10c8cc9528bc12f0e6f7f534964ed0994dc5c6b4a0 files/digest-outerspace-0.5.65 256
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.4 (GNU/Linux)
+Version: GnuPG v2.0.5 (GNU/Linux)
 
-iD8DBQFGdE/pdz7hIScOURERAo/rAJ4uOSxgdiHNqAGZ5xTKEdxnJKIIuQCdFYKC
-dyu9MpnTJt9sD2NL9yPxmcw=
-=HJtK
+iD8DBQFGvlQLdz7hIScOURERAtMIAKCDtySopI+6nR7CpoaFYpIoGK8EbACfZ7ey
+HScoV3sNWubjYE6ogMXcpsI=
+=e2XI
 -----END PGP SIGNATURE-----
