@@ -1,6 +1,11 @@
 # ChangeLog for games-strategy/outerspace
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/outerspace/ChangeLog,v 1.8 2007/06/16 21:02:27 nyhm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/outerspace/ChangeLog,v 1.9 2007/08/12 00:27:49 nyhm Exp $
+
+*outerspace-0.5.65 (12 Aug 2007)
+
+  12 Aug 2007; Tristan Heaven <nyhm@gentoo.org> +outerspace-0.5.65.ebuild:
+  Version bump
 
 *outerspace-0.5.64 (16 Jun 2007)
 
